--- a/car-change.html
+++ b/car-change.html
@@ -17,6 +17,208 @@
 </head>
 
 <body class="!font-inter">
+        <header class="w-full top-0 right-0 lg:bg-transparent bg-white md:shadow-none shadow-[0_0_1.25rem_0_#0000004D] font-poppins fixed z-40 xl:h-20">
+        <div class="w-full relative flex justify-between items-center lg:px-0 px-4">
+            <div
+                class="xl:w-1/6 lg:w-1/5 md: h-[4.125rem] shadow-[0_0_1.25rem_0_#0000004D] relative lg:flex lg:flex-col items-center py-5 bg-white hidden -skew-x-[18deg] origin-top">
+                <a href="#" class="lg:w-auto pl-3 w-auto flex items-center skew-x-[18deg] h-full">
+
+                    <img src="img/petromin-logo-300x75-1.webp" alt="desktop logo" title="desktop logo" img
+                        id="dynamicImage" class="lg:w-44 w-auto h-auto" loading="eager" fetchpriority="high"
+                        decodic="async">
+
+                </a>
+            </div>
+
+            <div class="flex lg:hidden bg-white ">
+                <a href="#" class="lg:w-auto w-auto flex items-center py-2">
+                    <img src="img/petromin-logo-300x75-1.webp" alt="mobile logo" title="mobile logo" width="w-146px"
+                        height="200" img id="dynamicImage" class="w-[9.125rem]" loading="lazy" fetchpriority="low">
+                </a>
+            </div>
+
+            <div
+                class="xl:w-10/12 lg:w-4/5 h-[4.125rem] bg-white relative lg:flex lg:flex-row flex-col  items-center justify-start hidden -skew-x-[18deg] lg:px-[1.875rem] origin-bottom shadow-[0_0_1.25rem_0_#0000004D]">
+                <div class="w-full flex justify-between items-center skew-x-[18deg]">
+                    <ul class="nav-menu flex items-center 2xl:gap-14 xl:gap-8 gap-x-6 justify-between w-full">
+                        <li><a href="javascript:;"
+                                class="text-[#000000] xl:text-sm text-xs active font-medium whitespace-nowrap uppercase">About
+                                Us</a></li>
+                        <li><a href="javascript:;"
+                                class="text-[#000000] xl:text-sm text-xs font-medium whitespace-nowrap uppercase">Services</a>
+                        </li>
+                        <li><a href="javascript:;"
+                                class="text-[#000000] xl:text-sm text-xs font-medium whitespace-nowrap uppercase">Latest
+                                offers</a></li>
+                        <li><a href="javascript:;"
+                                class="text-[#000000] xl:text-sm text-xs font-medium whitespace-nowrap uppercase">Blogs</a>
+                        </li>
+                        <li><a href="javascript:;"
+                                class="text-[#000000] xl:text-sm text-xs font-medium whitespace-nowrap uppercase">Newsroom</a>
+                        </li>
+                        <li><a href="javascript:;"
+                                class="text-[#000000] xl:text-sm text-xs font-medium whitespace-nowrap uppercase">PETROMINit!</a>
+                        </li>
+                        <li><a href="javascript:;"
+                                class="text-[#000000] xl:text-sm text-xs font-medium whitespace-nowrap uppercase">Locate
+                                Us</a></li>
+                        <li>
+                            <div class="user_submit relative group/cs">
+                                <a href="#"
+                                    class="border border-[#CB122D] flex items-center justify-center transition-all text-white py-[0.563rem] px-[0.688rem] cursor-pointer duration-500 group-hover/cs:bg-[#CB122D]">
+                                    <svg class="text-[#CB122D] size-[23px] group-hover/cs:text-white"
+                                        stroke="currentColor" fill="currentColor" viewBox="0 0 448 512"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z" />
+                                    </svg>
+                                </a>
+                                <ul
+                                    class="bg-[#cb122d] w-40 absolute top-[3.2rem] -left-28 p-4 opacity-0 z-40 transition-all translate-y-4 shadow-[0px_7px_10px_-1px_rgba(0,0,0,0.2)] invisible group-hover/cs:visible group-hover/cs:opacity-100">
+                                    <li
+                                        class="relative bg-white py-2 px-6 text-black text-sm font-normal flex items-center justify-center mb-3">
+                                        <a href="#" class="uppercase">Log in</a>
+                                    </li>
+                                    <li
+                                        class="relative bg-white py-2 px-6 text-black text-sm font-normal flex items-center justify-center">
+                                        <a href="#" class="uppercase">Sign Up</a>
+                                    </li>
+                                </ul>
+                                </d>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="flex items-center lg:gap-4 lg:hidden">
+                <div class="flex items-center">
+                    <div class="user_submit relative group/dd">
+                        <a href="#"
+                            class="border border-[#CB122D] flex items-center justify-center transition-all text-white py-[0.5rem] px-[0.438rem] cursor-pointer duration-500 group-hover/dd:bg-[#CB122D]">
+                            <svg class="text-[#CB122D] size-[17px] group-hover/dd:text-[#ffffff]" stroke="currentColor"
+                                fill="currentColor" viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z" />
+                            </svg>
+                        </a>
+                        <ul
+                            class="bg-[#cb122d] w-40 absolute top-[2.2rem] -left-20 p-4 opacity-0 z-40 transition-all translate-y-4 shadow-[0px_7px_10px_-1px_rgba(0,0,0,0.2)] invisible group-hover/dd:visible group-hover/dd:opacity-100">
+                            <li
+                                class="relative bg-white py-2 px-4 text-black text-sm font-normal flex items-center justify-center mb-3">
+                                <a href="#" class="uppercase">Log in</a>
+                            </li>
+                            <li
+                                class="relative bg-white py-2 px-4 text-black text-sm font-normal flex items-center justify-center">
+                                <a href="#" class="uppercase">Sign Up</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <label for="sideToggle"
+                        class="inline-flex items-center justify-center rounded-md p-2.5 text-black group-[]/nav:text-white">
+                        <span class="sr-only">Open menu</span>
+                        <svg class="size-8" stroke="currentColor" fill="currentColor" stroke-width="0"
+                            viewBox="0 0 20 20" aria-hidden="true" height="200px" width="200px"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd"
+                                d="M2 4.75A.75.75 0 0 1 2.75 4h14.5a.75.75 0 0 1 0 1.5H2.75A.75.75 0 0 1 2 4.75Zm0 10.5a.75.75 0 0 1 .75-.75h14.5a.75.75 0 0 1 0 1.5H2.75a.75.75 0 0 1-.75-.75ZM2 10a.75.75 0 0 1 .75-.75h7.5a.75.75 0 0 1 0 1.5h-7.5A.75.75 0 0 1 2 10Z"
+                                clip-rule="evenodd"></path>
+                        </svg>
+                    </label>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <input type="checkbox" class="peer/sideToggle hidden" name="sideToggle" id="sideToggle">
+    <label for="sideToggle" class="fixed inset-0 -z-[1011] peer-checked/sideToggle:opacity-100 opacity-0 duration-100">
+    </label>
+
+    <div
+        class="fixed flex flex-col h-full inset-y-0 right-0 z-[1011] w-full overflow-y-auto bg-[#051320] select-none text-white px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-theme1/10 peer-checked/sideToggle:translate-x-0 peer-checked/sideToggle:opacity-100 translate-x-full opacity-0 duration-300">
+        <div class="flex items-center justify-between">
+            <a href="javascript:;" class="-ml-1.5 cursor-pointer">
+                <span class="sr-only"></span>
+                <img src="img/petromin-logo-300x75-1.webp" alt="mobile logo" title="mobile logo" width="174" height="48"
+                    img id="dynamicImage" class="h-12 w-auto" loading="lazy" fetchpriority="low">
+            </a>
+            <label for="sideToggle" type="button" class="-m-2.5 rounded-md p-2.5 *:text-white">
+                <span class="sr-only">Close menu</span>
+                <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                    aria-hidden="true">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
+                </svg>
+            </label>
+        </div>
+        <div class="mt-6 flow-root flex-fill -mr-4 pr-4">
+            <div class="-my-6 divide-y divide-white">
+                <div class="space-y-2 py-6">
+                    <div class="flex flex-col gap-5 items-center">
+                        <div class="flex flex-col w-full gap-y-5">
+                            <div class="relative flex flex-col gap-y-3">
+                                <input class="peer/mm hidden" type="checkbox" name="mmMenu" id="mmAbout">
+                                <label for="mmAbout"
+                                    class="text-white text-sm active font-medium lg:py-4 py-2 px-1 uppercase tracking-[0.063rem] cursor-pointer">
+                                    <a href="about">About Us</a>
+                                </label>
+                            </div>
+                            <div class="relative flex flex-col gap-y-3">
+                                <input class="peer/mm hidden" type="checkbox" name="mmMenu" id="mmResources">
+                                <label for="mmResources"
+                                    class="text-white text-sm active font-medium lg:py-4 py-2 px-1 uppercase tracking-[0.063rem] cursor-pointer">
+                                    <a href="about">Services</a>
+                                </label>
+                            </div>
+                            <div class="relative flex flex-col gap-y-3">
+                                <input class="peer/mm hidden" type="checkbox" name="mmMenu" id="mmImp_links">
+                                <label for="mmImp_links"
+                                    class="text-white flex items-center text-sm font-medium lg:py-4 py-2 px-1 uppercase tracking-[0.063rem] cursor-pointer">
+                                    Latest offers
+                                </label>
+
+                            </div>
+                            <div class="relative flex flex-col gap-y-3">
+                                <input class="peer/mm hidden" type="checkbox" name="mmMenu" id="mmBackoffice">
+                                <label for="mmBackoffice"
+                                    class="text-white flex items-center text-sm font-medium lg:py-4 py-2 px-1 uppercase tracking-[0.063rem] cursor-pointer">
+                                    Blogs
+
+                                </label>
+
+                            </div>
+                            <div class="relative flex flex-col gap-y-3">
+                                <input class="peer/mm hidden" type="checkbox" name="mmMenu" id="mmClients">
+                                <label for="mmClients"
+                                    class="text-white flex items-center text-sm font-medium lg:py-4 py-2 px-1 uppercase tracking-[0.063rem] cursor-pointer">
+                                    <a href="javascript:;">Newsroom</a>
+                                </label>
+                            </div>
+                            <div class="relative flex flex-col gap-y-3">
+                                <input class="peer/mm hidden" type="checkbox" name="mmMenu" id="mmGallery">
+                                <label for="mmGallery"
+                                    class="text-white flex items-center text-sm font-medium lg:py-4 py-2 px-1 uppercase tracking-[0.063rem] cursor-pointer">
+                                    <a href="javascript:;">PETROMINit!</a>
+                                </label>
+                            </div>
+                            <div class="relative flex flex-col gap-y-3">
+                                <input class="peer/mm hidden" type="checkbox" name="mmMenu" id="mmBlogs">
+                                <label for="mmBlogs"
+                                    class="text-white flex items-center text-sm font-medium lg:py-4 py-2 px-1 uppercase tracking-[0.063rem] cursor-pointer">
+                                    <a href="javascript:;">locate us</a>
+                                </label>
+                            </div>
+                            <div class="relative flex flex-col gap-y-3">
+                                <input class="peer/mm hidden" type="checkbox" name="mmMenu" id="mmContact">
+                                <label for="mmContact"
+                                    class="text-white flex items-center text-sm font-medium lg:py-4 py-2 px-1 uppercase tracking-[0.063rem] cursor-pointer">
+                                    <a href="javascript:;">Contact Us</a>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="view border-y z-30 border-[#E5E5E5] py-6 md:hidden block md:relative sticky top-0 inset-x-0 bg-white ">
         <a href="" class="flex items-center gap-4 uppercase text-[#121212] text-lg font-medium">
             <span>
