--- a/otp.html
+++ b/otp.html
@@ -264,7 +264,7 @@
             </div>
         </label>
         <a href=""
-            class="w-1/2 bg-[#AFAFAF] w-full rounded-2xl h-[2.875rem] flex justify-center items-center text-sm font-bold text-white duration-500 hover:bg-[#CB122D]">Confirm
+            class="w-1/2 bg-[#AFAFAF] w-full rounded-lg h-[2.875rem] flex justify-center items-center text-sm font-bold text-white duration-500 hover:bg-[#CB122D]">Confirm
             Booking</a>
     </div>
 
